--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,11 @@
 name: Python package
 
-on: [push]
-
+on:
+  push:
+      branches:
+        - 'main'
+      paths:
+        - '**.py'
 jobs:
   build:
 
