--- a/.github/workflows/continue_on_error_test.yml
+++ b/.github/workflows/continue_on_error_test.yml
@@ -1,4 +1,4 @@
-name: GitHub Actions Demo
+name: Continue on error test
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
 jobs:
